working incident, need to enrich with popup input

--- a/src/popup.css
+++ b/src/popup.css
@@ -82,6 +82,21 @@ button:hover {
 .warning-icon {
   width: 24px;
   height: 24px;
+  font-size: 24px;
+  display: none;
+}
+
+.success-icon {
+  width: 24px;
+  height: 24px;
+  font-size: 24px;
+  display: none;
+}
+
+.loading-icon {
+  width: 24px;
+  height: 24px;
+  font-size: 24px;
   display: none;
 }
 
