--- a/src/popup.css
+++ b/src/popup.css
@@ -112,6 +112,13 @@ hr {
   gap: 8px;
 }
 
+.dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* pushes label left, select right */
+  gap: 2px; /* optional spacing */
+}
+
 .dropdown label {
   flex: 1;
   font-size: 142x;
